[tool.poetry]
name = "tuna"
version = "0.3.0"
description = ""
authors = ["ElderMillenial <eldermillenial@protonmail.com>"]
readme = "README.md"
packages = [{include = "tuna", from = "src"}]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.12"
pycardano = "^0.11.1"
blockfrost-python = "^0.5.3"
setuptools = "^71.1.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
setuptools-cpp = "^0.1.0"
wheel = "^0.43.0"


[build-system]
requires = ["poetry-core", "wheel", "setuptools", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
